add changes to Idex.html

--- a/Index.html
+++ b/Index.html
@@ -17,7 +17,7 @@
   <div class="starter">
     <h1>AKAN</h1>
     <img src="https://i.pinimg.com/originals/af/4a/49/af4a49feeccaa57d39aec24e82d94e7c.jpg"height="510px"width="650px" alt="">
-    <p>They are an ethnic group from G-Ghana<br>and parts of West Africa<br>,who name their children depending <br>on the day of the week</p>
+    <p>They are an ethnic group from Ghana<br>and parts of West Africa<br>,who name their children depending <br>on the day of the week</p>
 
 
 </div>
